# xray_mai_bot_v2_pverrrrrrrr

./: .env.dev  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt  重构命名规范.md
src/libraries/: GLOBAL_CONSTANT.py  GLOBAL_PATH.py  GLOBAL_RULE.py  execution_time.py
src/libraries/data_handle/: abstract_db_handle.py  alias_db_handle.py  black_list_handle.py  open_chars_handle.py  userdata_handle.py
src/libraries/game_handle/: guess_cover.py
src/libraries/image_handle/: image.py
src/libraries/maimai/: maimaidx_music.py  near_maimai.py  utils.py
src/libraries/maimai/completion_status_table/: new_pcst_base_img.py  user_level_completion_status_table.py  user_version_completion_status_table.py  utils.py  version_image.py
src/libraries/maimai/maimai_fortune/: maimai_fortune.py  utils.py
src/libraries/maimai/maimai_music_data/: maimai_music_data.py  maimai_utage_music_data.py  utils.py
src/libraries/maimai/maimai_play_best50/: maimai_play_best50_new.py  (+3 more)
src/plugins/xray_plugin_auto/: __init__.py
src/plugins/xray_plugin_black_list/: __init__.py
src/plugins/xray_plugin_guess_music/: __init__.py
src/plugins/xray_plugin_maimai_alias/: __init__.py
src/plugins/xray_plugin_maimaidx/: __init__.py  utils.py
src/plugins/xray_plugin_utils/: __init__.py
src/plugins/xray_plugins_generate_completion_status_table/: __init__.py  common.py  config.py
src/plugins/xray_plugins_log/: __init__.py
src/plugins/xray_plugins_open_chars/: __init__.py  utils.py
src/plugins/xray_plugins_saveimage/: __init__.py
src/plugins/xray_plugins_userdata/: __init__.py
(+2 files in other folders)
